adding shell commands

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,23 @@ services:
       - ./configs:/app/configs:ro
     entrypoint: ["python", "-m", "src.jobs.generate_signals"]
 
+  rank_scores:
+    build: .
+    env_file: .env
+    volumes:
+      - ./data:/app/data
+      - ./logs:/app/logs
+    entrypoint: ["python", "-m", "src.jobs.rank_scores"]
+
+  generate_orders:
+    build: .
+    env_file: .env
+    volumes:
+      - ./data:/app/data
+      - ./outputs:/app/outputs
+      - ./logs:/app/logs
+    entrypoint: ["python", "-m", "src.jobs.generate_orders"]
+
   report:
     build: .
     env_file: .env
